--- a/index.html
+++ b/index.html
@@ -5,10 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&family=Work+Sans:wght@500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    <h3>Mollah Departmental Store 33</h3>
+    <header class="header-section container">
+        <section class="header-content">
+            <div class="logo-section">
+                <h3>G3 Architects</h3>
+            </div>
+            <div class="menu-section">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </div>
+        </section>
+
+        <section>
+            <div class="slider-content">
+                <h2>Brand New</h2>
+                <h2>Group of Architects</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button>Explore More</button>
+
+                <img src="images/banner.png" alt="">
+            </div>
+        </section>
+    </header>
+
+    <main>
+        <section class="quick-list container">
+            <div class="quick-section">
+                <div class="quick-images">
+                    <img src="images/team1.png" alt="">
+                    <img src="images/team2.png" alt="">
+                    <img src="images/team3.png" alt="">
+                    <img src="images/team4.png" alt="">
+                </div>
+                <div class="quick-description">
+                    <h3><span class="quick-1">Quick list</span> <span class="quick-2">of Our</span></h3>
+                    <h3 class="quick-3"> Features</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button>Explore More</button>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer></footer>
 
 
 </body>
