--- a/index.html
+++ b/index.html
@@ -58,6 +58,37 @@
                 </div>
             </div>
         </section>
+
+
+
+        <section class="feature container">
+            <div class="feature-content">
+                <h3>Features you will</h3>
+                <h3>love & enjoy</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="feature-list">
+                    <h2>Dexktop & Mobile Version</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-list">
+                    <h2>Drag & Drop Builder</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-list">
+                    <h2>Awesome Modern Design</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-list">
+                    <h2>Super Easy to Edit</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="feature-images">
+                <img src="images/architect.png" alt="">
+                <button><h4>10+ Year</h4>
+                <p>Experience</p></button>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
