--- a/index.html
+++ b/index.html
@@ -89,9 +89,62 @@
                 <p>Experience</p></button>
             </div>
         </section>
+
+
+
+        <section class="some container">
+            <h2>Some Facts</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but </p>
+            <p>the majority have suffered alteration.</p>
+        </section>
+
+
+        <section class="icon container">
+            <div class="icon-content">
+                <h6><img src="images/icons/ribon.png" alt=""></h6>
+                <h2>54</h2>
+                <p>Awards Winnings</p>
+            </div>
+
+            <div class="icon-content">
+                <h6><img src="images/icons/projects.png" alt=""></h6>
+                <h2>1458</h2>
+                <p>Projects Finished</p>
+            </div>
+
+            <div class="icon-content">
+                <h6><img src="images/icons/customers.png" alt=""></h6>
+                <h2>590</h2>
+                <p>Clients Worked</p>
+            </div>
+
+            <div class="icon-content">
+                <h6><img src="images/icons/email.png" alt=""></h6>
+                <h2>22578</h2>
+                <p>Email Send</p>
+            </div>
+        </section>
+
+
+        <section class="sponser container">
+            <h1>Our Sponspors</h1>
+            <p>There are many variations of passages of Lorem Ipsum available,but</p>
+            <p> the majority have suffered alteration.</p>
+            <div class="Sponspors-icon">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <section class="footer container">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </section>
+    </footer>
 
 
 </body>
