--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-
+<!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&family=Work+Sans:wght@500&display=swap" rel="stylesheet">
-
+<!-- Styleshhet -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Header Section Start -->
     <header class="header-section container">
         <section class="header-content">
             <div class="logo-section">
@@ -41,6 +41,11 @@
         </section>
     </header>
 
+    <!-- Header Section End -->
+
+
+    <!-- Body Section Start -->
+    <!-- Quick Section start -->
     <main>
         <section class="quick-list container">
             <div class="quick-section">
@@ -59,8 +64,10 @@
             </div>
         </section>
 
+        <!-- Quick Section End -->
 
 
+<!-- Feature Section Start -->
         <section class="feature container">
             <div class="feature-content">
                 <h3>Features you will</h3>
@@ -90,15 +97,19 @@
             </div>
         </section>
 
+        <!-- Feature Section End -->
 
+        <!-- some Section Start -->
 
         <section class="some container">
             <h2>Some Facts</h2>
             <p>There are many variations of passages of Lorem Ipsum available, but </p>
             <p>the majority have suffered alteration.</p>
         </section>
+<!-- Some Section End -->
 
 
+<!-- Icon Section Start -->
         <section class="icon container">
             <div class="icon-content">
                 <h6><img src="images/icons/ribon.png" alt=""></h6>
@@ -125,7 +136,10 @@
             </div>
         </section>
 
+        <!-- Icon Section End -->
 
+
+        <!-- Sponsors Section Start -->
         <section class="sponser container">
             <h1>Our Sponspors</h1>
             <p>There are many variations of passages of Lorem Ipsum available,but</p>
@@ -140,11 +154,16 @@
         </section>
     </main>
 
+    <!-- Sponspors Section End -->
+    <!-- End Body Section -->
+
+    <!-- Start Footer Section -->
     <footer>
         <section class="footer container">
             <p>All rights reserved copyright@2023 startup landing page design</p>
         </section>
     </footer>
+    <!-- End Footer Section -->
 
 
 </body>
